# cf-tool

./: Cargo.toml  README.md
src/: args.rs  lib.rs  log.rs  settings.rs
src/api/: error.rs  methods.rs  mod.rs  objects.rs  parse.rs  utils.rs
src/display/tui/: app.rs  error.rs  event.rs  mod.rs  msg.rs  types.rs  utils.rs
src/display/tui/base_component/: mod.rs  paragraph.rs  table.rs  tabs.rs
src/display/tui/component/: mod.rs  popup.rs  popup_parse_contest.rs  popup_test.rs  utils.rs
src/display/tui/component/browser/: mod.rs
src/display/tui/component/browser/contest/: mod.rs  problems_list.rs  standings_list.rs  submissions_list.rs  tabs.rs
src/display/tui/component/browser/main/: contest_list.rs  mod.rs  problemset_list.rs  tabs.rs
src/display/tui/component/popup/: mod.rs  popup_parse_contest_problem.rs  select.rs  simple.rs  updatable.rs
src/display/tui/view/: mod.rs  popup.rs  popup_parse_contest.rs  popup_parse_contest_problem.rs
src/display/tui/view/browser/: contest.rs  main.rs  mod.rs
src/display/tui/view/popup/: mod.rs  popup_test.rs  select.rs  simple.rs  updatable.rs
