[package]
name = "cf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
color-eyre = "0.6.2"
config = { version = "0.13.3", features = ["json"] }
dirs = "4.0.0"
futures = "0.3.25"
lazy_static = "1.4.0"
rand = "0.8.5"
reqwest = { version = "0.11.13", features = ["json"] }
serde = { version = "1.0.150", features = ["derive"] }
serde_json = "1.0.89"
sha2 = "0.10.6"
thiserror = "1.0.37"
tokio = { version = "1.23.0", features = ["rt"] }
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "fmt", "registry"] }
