[package]
name = "cf"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cf-cli"
path = "src/bin/cf-cli.rs"

[[bin]]
name = "cf-tui"
path = "src/bin/cf-tui.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
bytesize = "1.1.0"
chrono = "0.4.23"
clap = { version = "4.0.29", features = ["cargo", "derive"] }
color-eyre = "0.6.2"
config = { version = "0.13.3", features = ["json"] }
crossterm = { version = "0.25.0", features = ["event-stream"] }
dirs = "4.0.0"
duration-human = "0.1.10"
execute = "0.2.11"
futures = "0.3.25"
lazy_static = "1.4.0"
nipper = "0.1.9"
rand = "0.8.5"
reqwest = { version = "0.11.13", features = ["json", "cookies"] }
serde = { version = "1.0.150", features = ["derive"] }
serde_json = "1.0.89"
sha2 = "0.10.6"
similar = "2.2.1"
terminal-clipboard = "0.3.1"
thiserror = "1.0.37"
tokio = { version = "1.23.0", features = ["full", "sync", "process"] }
tokio-stream = "0.1.11"
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "fmt", "registry"] }
tuirealm = "1.8.0"
webbrowser = "0.8.2"
